# security-rag-assistant

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/raw/: sample_logs.jsonl
eval/: evaluate.py
src/security_rag/: __init__.py  audit.py  cli.py  ingest.py  preprocess.py  rag.py  schemas.py  vector_store.py
tests/: test_preprocess.py
